Fix scrollbar issue

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,7 +1,9 @@
 .container {
+  position: relative;
   display: flex;
   background-color: #20913a;
   justify-content: center;
   align-items: center;
   height: 100%;
+  overflow: hidden;
 }
